force-app/main/default/objects/Commission__c/Commission__c.object-meta.xml
<CustomObject>
    <label>Commission</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Commission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>