force-app/main/default/objects/Commission__c/fields/CommisionName__c.field-meta.xml
<CustomField>
    <fullName>CommisionName__c</fullName>
    <label>Commission Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>