force-app/main/default/objects/Commission__c/fields/CommisionStatus__c.field-meta.xml
<CustomField>
    <fullName>CommisionStatus__c</fullName>
    <label>Commission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commission_Status</valueSetName>
    </valueSet>
</CustomField>