force-app/main/default/objects/Commission__c/fields/CommisionTo__c.field-meta.xml
<CustomField>
    <fullName>CommisionTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>