force-app/main/default/objects/Commission__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>IF( Qualified__c = TRUE,  TotalProfitVND1__c  *  CommissionRate__c , 0)</formula>
    <label>Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>