force-app/main/default/objects/Commission__c/fields/CommissionPaymentNote__c.field-meta.xml
<CustomField>
    <fullName>CommissionPaymentNote__c</fullName>
    <label>Commission - Payment Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>