force-app/main/default/objects/Commission__c/fields/CommissionRate__c.field-meta.xml
<CustomField>
    <fullName>CommissionRate__c</fullName>
    <formula>Owner:User.CommissionRate__c</formula>
    <label>Commission Rate</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>