force-app/main/default/objects/Commission__c/fields/CommissionSettledDate__c.field-meta.xml
<CustomField>
    <fullName>CommissionSettledDate__c</fullName>
    <label>Commission - Settled Date</label>
    <type>Date</type>
</CustomField>