force-app/main/default/objects/Commission__c/fields/PaymentConfirmedCommission__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmedCommission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Confirmed - Commission</label>
    <type>Checkbox</type>
</CustomField>