force-app/main/default/objects/Commission__c/fields/PreviousPayslip__c.field-meta.xml
<CustomField>
    <fullName>PreviousPayslip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Payslip</label>
    <referenceTo>Payslip__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>