force-app/main/default/objects/Commission__c/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <formula>IF(TotalProfitVND1__c &gt;  TargetSalary__c, TRUE, FALSE)</formula>
    <label>Qualified</label>
    <type>Checkbox</type>
</CustomField>