force-app/main/default/objects/Commission__c/fields/SalesTeam__c.field-meta.xml
<CustomField>
    <fullName>SalesTeam__c</fullName>
    <formula>TEXT(Owner:User.SalesTeam__c)</formula>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>