force-app/main/default/objects/Commission__c/fields/TargetRevenue__c.field-meta.xml
<CustomField>
    <fullName>TargetRevenue__c</fullName>
    <label>Target Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>