force-app/main/default/objects/Commission__c/fields/TargetSalary__c.field-meta.xml
<CustomField>
    <fullName>TargetSalary__c</fullName>
    <formula>IF( SalesTeam__c = &apos;OVS&apos;,  TotalIncomeBeforeTax__c , TotalIncomeBeforeTax__c  * 3)</formula>
    <label>Target Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>