force-app/main/default/objects/Commission__c/fields/TotalIncomeBeforeTax__c.field-meta.xml
<CustomField>
    <fullName>TotalIncomeBeforeTax__c</fullName>
    <label>Total Income (Before Tax)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>