force-app/main/default/objects/Commission__c/fields/TotalProfitinShipmentUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalProfitinShipmentUSD__c</fullName>
    <label>Total Profit in Shipment (USD)</label>
    <summarizedField>ShipmentCommission__c.ProfitInclTaxUSD__c</summarizedField>
    <summaryForeignKey>ShipmentCommission__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>