force-app/main/default/objects/Commission__c/fields/TotalProfitinShipmentVND__c.field-meta.xml
<CustomField>
    <fullName>TotalProfitinShipmentVND__c</fullName>
    <label>Total Profit in Shipment (VND)</label>
    <summarizedField>ShipmentCommission__c.ProfitInclTaxVND__c</summarizedField>
    <summaryForeignKey>ShipmentCommission__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>