force-app/main/default/objects/Commission__c/fields/TotalProfitUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalProfitUSD__c</fullName>
    <formula>TotaProfitUSD__c +  TotalProfitinShipmentUSD__c</formula>
    <label>Total Profit (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>