force-app/main/default/objects/Commission__c/fields/TotalProfitVND1__c.field-meta.xml
<CustomField>
    <fullName>TotalProfitVND1__c</fullName>
    <formula>TotalProfitVND__c +  TotalProfitinShipmentVND__c</formula>
    <label>Total Profit (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>