force-app/main/default/objects/Commission__c/fields/TotalProfitVND__c.field-meta.xml
<CustomField>
    <fullName>TotalProfitVND__c</fullName>
    <label>Total Profit in Job (VND)</label>
    <summarizedField>JobCommission__c.ProfitInclTaxVND__c</summarizedField>
    <summaryForeignKey>JobCommission__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>