force-app/main/default/objects/Commission__c/fields/TotalUnreceivedinJobUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalUnreceivedinJobUSD__c</fullName>
    <label>Total Unreceived in Job (USD)</label>
    <summarizedField>JobCommission__c.TotalUnreceivedBalanceUSD__c</summarizedField>
    <summaryForeignKey>JobCommission__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>