force-app/main/default/objects/Commission__c/fields/TotalUnreceivedinJobVND__c.field-meta.xml
<CustomField>
    <fullName>TotalUnreceivedinJobVND__c</fullName>
    <label>Total Unreceived in Job (VND)</label>
    <summarizedField>JobCommission__c.TotalUnreceivedBalanceVND__c</summarizedField>
    <summaryForeignKey>JobCommission__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>