force-app/main/default/objects/Commission__c/fields/TotalUnreceivedinShipmentUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalUnreceivedinShipmentUSD__c</fullName>
    <label>Total Unreceived in Shipment (USD)</label>
    <summarizedField>ShipmentCommission__c.TotalUnreceivedBalanceUSD__c</summarizedField>
    <summaryForeignKey>ShipmentCommission__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>