force-app/main/default/objects/Commission__c/fields/TotalUnreceivedinShipmentVND__c.field-meta.xml
<CustomField>
    <fullName>TotalUnreceivedinShipmentVND__c</fullName>
    <label>Total Unreceived in Shipment (VND)</label>
    <summarizedField>ShipmentCommission__c.TotalUnreceivedBalanceVND__c</summarizedField>
    <summaryForeignKey>ShipmentCommission__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>