force-app/main/default/objects/Commission__c/fields/TotalUnreceivedUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalUnreceivedUSD__c</fullName>
    <formula>TotalUnreceivedinJobUSD__c +  TotalUnreceivedinShipmentUSD__c</formula>
    <label>Total Unreceived (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>