force-app/main/default/objects/Commission__c/fields/TotalUnreceivedVND__c.field-meta.xml
<CustomField>
    <fullName>TotalUnreceivedVND__c</fullName>
    <formula>TotalUnreceivedinJobVND__c +  TotalUnreceivedinShipmentVND__c</formula>
    <label>Total Unreceived (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>