force-app/main/default/objects/Commission__c/fields/TotaProfitUSD__c.field-meta.xml
<CustomField>
    <fullName>TotaProfitUSD__c</fullName>
    <label>Total Profit in Job (USD)</label>
    <summarizedField>JobCommission__c.ProfitInclTaxUSD__c</summarizedField>
    <summaryForeignKey>JobCommission__c.Commission__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>