force-app/main/default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CommisionName__c</columns>
    <columns>CommisionTo__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>TotalProfitUSD__c</columns>
    <columns>TotalProfitVND1__c</columns>
    <columns>TotalUnreceivedUSD__c</columns>
    <columns>TotalUnreceivedVND__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>